# clipgen

./: .gitignore  .replit  ai_selector.py  app.py  auth.py  buffer_client.py  buffer_routes.py  config.json  config_manager.py  downloader.py  main.py  postiz_client.py  processor.py  publisher_db.py  publisher_routes.py  publisher_scheduler.py  pyproject.toml  replit.md  replit.nix  requirements.txt  transcript.py  utils.py  video_editor.py
artifacts/api-server/.replit-artifact/: artifact.toml
attached_assets/: Pasted-Build-a-fully-functional-production-ready-Python-3-10-p_1775510255534.txt  Pasted-Build-a-fully-functional-production-ready-Python-3-10-p_1775511389598.txt  Pasted-Let-me-read-the-current-files-before-making-changes-3-a_1775512609223.txt  Pasted-POSTIZ-INTEGRATION-DYNAMIC-CONFIGURATION-FULLY-IMPLEMEN_1775512281289.txt
src/publisher/: browser-login.js  browser.js  package.json  scheduler.js  session-login.js
templates/: 403.html  admin.html  index.html  login.html  register.html
